1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>

	* destroy-right.c (ports_destroy_right): Return error_t (always 0).
	* ports.h: Update decl.

	* bucket-iterate.c (_ports_bucket_class_iterate): New function,
	transmorgified from ports_bucket_iterate.
	(ports_bucket_iterate): Now just call that to do the work.
	* class-iterate.c: New file.
	(ports_class_iterate): New function.
	* ports.h: Declare ports_class_iterate and _ports_bucket_class_iterate.
	* Makefile (SRCS): Add class-iterate.c.

Thu Feb 25 10:31:57 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* end-rpc.c (ports_end_rpc): Signal ports_block anytime an rpc
	ends and someone is waiting on an inhibition.

1999-01-01  Roland McGrath  <roland@baalperazim.frob.com>

	* interrupt-on-notify.c (ports_interrupt_self_on_notification): Use
	assert to check we are in an rpc; don't return EIEIO (not appropriate).

1997-08-14  Miles Bader  <miles@gnu.ai.mit.edu>

	* interrupt-rpcs.c (ports_interrupt_rpcs): Put RPC into the
	interrupted list.
	* end-rpc.c (ports_end_rpc): Call ports_self_interrupted to remove
	the current thread from the interrupted list.
	* ports.h (ports_self_interrupted): New declaration.
	(struct rpc_info): Add interrupted_next field.
	* Makefile (SRCS): Add interrupted.c.

Wed Aug 20 13:56:40 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* manage-multithread.c (ports_manage_port_operations_multithread):
 	Drop parms `wire_cthreads' and `wire_threads'.  Add parm `hook'.
	(thread_function): Call HOOK instead of cthread_wire and/or
	thread_wire.
	* ports.h (ports_manage_port_operations_multithread): Adjust
	declaration.

Fri Feb 14 00:51:32 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* create-bucket.c (ports_create_bucket): Initialize rpcs, flags, &
	count fields in RET.

Thu Sep 12 16:19:35 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(libports.so): Delete special depedency.
