@@ -1,3 +1,8 @@
+Sat Mar  6 17:05:45 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* notify-dead-name.c (ports_do_mach_notify_dead_name): Deallocate
+ 	newly created reference to DEAD_NAME.
+
 1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* destroy-right.c (ports_destroy_right): Return error_t (always 0).
